// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should render correctly with \`medium\` size 1`] = `
Array [
  ".icon-0-2-1 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-2 {
  color: #000000;
  font-size: 48px;
}",
  <i
    aria-hidden="true"
    class="icon-0-2-1 icon-d0-0-2-2 natds-icons natds-icons-outlined-default-mockup"
    data-testid="icon-outlined-default-mockup"
    role="img"
  />,
]
`;

exports[`Icon component should render correctly with \`primary\` color 1`] = `
Array [
  ".icon-0-2-1 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-2 {
  color: #f4ab34;
  font-size: 24px;
}",
  <i
    aria-hidden="true"
    class="icon-0-2-1 icon-d0-0-2-2 natds-icons natds-icons-outlined-default-mockup"
    data-testid="icon-outlined-default-mockup"
    role="img"
  />,
]
`;

exports[`Icon component should render correctly with default props 1`] = `
Array [
  ".icon-0-2-1 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-2 {
  color: #000000;
  font-size: 24px;
}",
  <i
    aria-hidden="true"
    class="icon-0-2-1 icon-d0-0-2-2 natds-icons natds-icons-outlined-default-mockup"
    data-testid="icon-outlined-default-mockup"
    role="img"
  />,
]
`;
